# iamc-kiosk

./: .dockerignore  .env.production.example  .gitignore  DEMO_VIDEO_TRANSCRIPT.md  DEMO_WALKTHROUGH_GUIDE.md  Dockerfile  Dockerfile.railway  LLM_ARCHITECTURE_PLAN.md  MONOREPO.md  PRODUCTION_RECALL.md  README.md  STATELOCK.yaml  STYLE_GUIDE.md  build-monorepo.sh  demo_shortcuts_ledger.md  docker-compose.monorepo.yml  dual-track-architect.CLAUDE.md  kiosk-demo-executor.CLAUDE.md  prod-rust-implementor.CLAUDE.md
.claude/: agent-hooks.yaml
backend/: .dockerignore  Dockerfile  README.md
backend/api/: Cargo.toml
backend/api/src/: main.rs
contracts/: hypothesis.v1.json  roles.v1.json  runtime.v1.json  ui-config.v1.json
docker/: README.md  docker-compose.yml
docs/: AGENTS.md  API.md  DEVELOPMENT.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.cjs
requesty-ai-docs/: docs.requesty.ai_api-reference_endpoint_chat-completions-create.md  docs.requesty.ai_api-reference_endpoint_embeddings-create.md  docs.requesty.ai_api-reference_endpoint_manage-api-key-create.md  docs.requesty.ai_api-reference_endpoint_manage-api-key-delete.md  docs.requesty.ai_api-reference_endpoint_manage-api-key-get-usage.md  docs.requesty.ai_api-reference_endpoint_manage-api-key-get.md  docs.requesty.ai_api-reference_endpoint_manage-api-key-update-limit.md  (+37 more)
theParentRootForReference/iamc-rights-intel-main/retreat_kiosk/backend/engine/: Cargo.toml
theParentRootForReference/iamc-rights-intel-main/retreat_kiosk/backend/engine/src/: lib.rs
(+103 files in other folders)
