[package]
name = "engine"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features=["serde"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
